deployment/frontend/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-ui-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30013
      port: 8888
      targetPort: 80
  selector:
    app: inventory-ui
