deployment/frontend/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    # # add an annotation indicating the issuer to use.
    # cert-manager.io/issuer: my-ca-issuer
    # cert-manager.io/common-name: movies.com

spec:
 
  rules:
    - host: movies-ui.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-ui-service
                port:
                  number: 8888
  
  # TLS config using openssl
  # tls:
  #   - secretName: my-tls-secret
  #     hosts:
  #       - movies.com  



  # TLS config using cert manager
  # tls: #  placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  # - hosts:
  #   - movies.com
  #   secretName: myingress-cert #  cert-manager will store the created certificate in this secret.
